[package]
name = "elogbook"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
dotenv = "0.15"
actix-cors = "0.6"

[lib]
name = "elogbook"
path = "src/lib.rs"

[dev-dependencies]
serde_json = "1.0"
actix-rt = "2.5"