[package]
name = "elogbook"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.0"
futures = "0.3"
futures-util = "0.3" 
tokio = {version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
dotenv = "0.15"
actix-cors = "0.6"

[lib]
name = "elogbook"
path = "src/lib.rs"

[dev-dependencies]
serde_json = "1.0"
actix-rt = "2.5"